Added game world type

--- a/resources/view/admin/modules/worlds/index.html.twig
+++ b/resources/view/admin/modules/worlds/index.html.twig
@@ -92,7 +92,7 @@
 											<label class="form-label" for="world_world_type">World Type</label>
 											<select class="form-select" name="world_world_type" id="world_world_type">
 												<option value="0">Regular</option>
-												<option value="1">Regular</option>
+												<option value="1">Experimental</option>
 											</select>
 										</div>
 										<div class="col-md-12 col-lg-12">
