Starting translation with i18n

--- a/resources/view/admin/modules/home/index.html.twig
+++ b/resources/view/admin/modules/home/index.html.twig
@@ -20,23 +20,6 @@
 		<div class="content-body">
 			<section id="">
 				<div class="row match-height">
-					<!-- Medal Card -->
-					<!--
-					<div class="col-xl-4 col-md-6 col-12">
-						<div class="card card-congratulation-medal">
-							<div class="card-body">
-								<h5>Congratulations 🎉 John!</h5>
-								<p class="card-text font-small-3">You have won gold medal</p>
-								<h3 class="mb-75 mt-2 pt-50">
-									<a href="#">$48.9k</a>
-								</h3>
-								<button type="button" class="btn btn-primary waves-effect waves-float waves-light">View Sales</button>
-								<img src="{{ URL }}/resources/canary/images/illustration/badge.svg" class="congratulation-medal" alt="Medal Pic">
-							</div>
-						</div>
-					</div>
-					-->
-					<!--/ Medal Card -->
 
 					<div class="col-xl-4 col-md-6 col-12">
 						<div class="card card-statistics">
@@ -80,7 +63,7 @@
 					<div class="col-xl-8 col-md-6 col-12">
 						<div class="card card-statistics">
 							<div class="card-header">
-								<h4 class="card-title">Statistics</h4>
+								<h4 class="card-title" data-i18n="Statistics">Statistics</h4>
 							</div>
 							<div class="card-body statistics-body">
 								<div class="row">
@@ -92,7 +75,7 @@
 												</div>
 											</div>
 											<div class="my-auto">
-												<p class="card-text font-small-3 mb-0">Guilds</p>
+												<p class="card-text font-small-3 mb-0" data-i18n="Guilds">Guilds</p>
 												<h4 class="fw-bolder mb-0">{{ total_guilds }}</h4>
 											</div>
 										</div>
@@ -105,7 +88,7 @@
 												</div>
 											</div>
 											<div class="my-auto">
-												<p class="card-text font-small-3 mb-0">Houses</p>
+												<p class="card-text font-small-3 mb-0" data-i18n="Houses">Houses</p>
 												<h4 class="fw-bolder mb-0">{{ total_houses }}</h4>
 											</div>
 										</div>
