--- a/resources/view/admin/base.html.twig
+++ b/resources/view/admin/base.html.twig
@@ -69,6 +69,9 @@
 					
 				</div>
 				<ul class="nav navbar-nav align-items-center ms-auto">
+					<li class="nav-item dropdown dropdown-language"><a class="nav-link dropdown-toggle" id="dropdown-flag" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="flag-icon flag-icon-us"></i><span class="selected-language">English</span></a>
+						<div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdown-flag"><a class="dropdown-item" href="#" data-language="en"><i class="flag-icon flag-icon-us"></i> English</a><a class="dropdown-item" href="#" data-language="pt"><i class="flag-icon flag-icon-br"></i> Português</a></div>
+					</li>
 					<li class="nav-item dropdown dropdown-user">
 						<a class="nav-link dropdown-toggle dropdown-user-link" id="dropdown-user" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							<div class="user-nav d-sm-flex d-none">
@@ -84,16 +87,9 @@
 							</span>
 						</a>
 						<div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdown-user">
-							<a class="dropdown-item" href="{{ URL }}/admin/profile">
-								<i class="me-50" data-feather="user"></i>
-								Profile</a>
+							<a class="dropdown-item" href="{{ URL }}/admin/accounts/{{ admin.id }}"><i class="me-50" data-feather="user"></i>My Account</a>
 							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="{{ URL }}/admin/profile/settings">
-								<i class="me-50" data-feather="settings"></i>
-								Settings</a>
-							<a class="dropdown-item" href="{{ URL }}/admin/logout">
-								<i class="me-50" data-feather="power"></i>
-								Logout</a>
+							<a class="dropdown-item" href="{{ URL }}/admin/logout"><i class="me-50" data-feather="power"></i>Logout</a>
 						</div>
 					</li>
 				</ul>
@@ -220,11 +216,12 @@
 		<script src="{{ URL }}/resources/canary/vendors/js/forms/spinner/jquery.bootstrap-touchspin.js"></script>
 		<script src="{{ URL }}/resources/canary/custom/form-number-input.js"></script>
 
+		<script src="{{ URL }}/resources/canary/js/scripts/extensions/ext-component-i18n.js"></script>
+
 		<!-- Custom -->
 		<script src="{{ URL }}/resources/canary/custom/charts.js"></script>
 		<script src="{{ URL }}/resources/canary/custom/players-list.js"></script>
 
-				
 		<script>
 			$(window).on('load', function () {
 				if (feather) {
