--- a/resources/view/base/info_bar.html.twig
+++ b/resources/view/base/info_bar.html.twig
@@ -5,18 +5,18 @@
 		<div class="Border_1" style="background-image:url({{IMAGE_PATH}}/global/content/border-1.gif);"></div>
 		<div class="BorderTitleText" style="background-image:url({{IMAGE_PATH}}/global/content/newsheadline_background.gif); height: 28px;">
 			<div class="InfoBar">
-				<a class="NotOnMobile" href="{{URL}}/downloads">
-				<img class="InfoBarBigLogo" src="{{IMAGE_PATH}}/global/header/info/icon-download.png">
-				<span class="InfoBarNumbers"><span class="InfoBarSmallElement">Download</span>
-				</span>
+				<a class="InfoBarBlock" href="{{URL}}/downloads">
+					<img class="InfoBarBigLogo NotOnMobile" src="{{IMAGE_PATH}}/global/header/info/icon-download.png">
+					<img class="InfoBarSmallLogo" src="{{IMAGE_PATH}}/global/header/info/icon-download.png">
+					<span class="InfoBarNumbers"><span class="InfoBarSmallElement">Download</span></span>
 				</a>
-				<a style="float:right;" href="{{URL}}/community/worlds"><img class="InfoBarBigLogo" src="{{IMAGE_PATH}}/global/header/info/icon-players-online.png"><span class="InfoBarNumbers">
-						{% if playersonline == 0 %}
-						<span class="InfoBarSmallElement">{{ server_status }}</span>
-						{% else %}
-							<span class="InfoBarSmallElement">{{ playersonline }} Players Online</span>
-						{% endif %}
-					</span>
+				<a style="float:right;" href="{{URL}}/community/worlds">
+					<img class="InfoBarBigLogo" src="{{IMAGE_PATH}}/global/header/info/icon-players-online.png">
+					{% if playersonline == 0 %}
+						<span class="InfoBarNumbers"><span class="InfoBarSmallElement">Server Offline</span></span></span>
+					{% else %}
+						<span class="InfoBarNumbers"><span class="InfoBarSmallElement">{{ playersonline }}<span class="NotOnMobile"> Players Online</span></span></span>
+					{% endif %}
 				</a>
 			</div>
 		</div>
