--- a/resources/view/pages/base.html.twig
+++ b/resources/view/pages/base.html.twig
@@ -119,7 +119,7 @@ var FB_ForceReload = 0;
 				<header id="MobileMenu">
 					<nav>
 						<div id="MobileMenuBottom"></div>
-						<div class="MobileTibiaLogo"><a id="" href="https://www.tibia.com/news/?subtopic=latestnews"> </a></div>
+						<div class="MobileTibiaLogo"><a id="" href="{{URL}}"> </a></div>
 						<input type="checkbox" id="MobileShortMenuIcon">
 						<label for="MobileShortMenuIcon" id="MyAccount" class="MobileShortMenuIconContainer MobileNavigationMainElement"></label>
 						<ul class="MobileMenuItems MobileShortMenuItems">
