Added character and account editor for admin

--- a/resources/view/admin/base.html.twig
+++ b/resources/view/admin/base.html.twig
@@ -87,7 +87,7 @@
 							</span>
 						</a>
 						<div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdown-user">
-							<a class="dropdown-item" href="{{ URL }}/admin/accounts/{{ admin.id }}"><i class="me-50" data-feather="user"></i>My Account</a>
+							<a class="dropdown-item" href="{{ URL }}/admin/accounts/{{ admin.id }}/view"><i class="me-50" data-feather="user"></i>My Account</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="{{ URL }}/admin/logout"><i class="me-50" data-feather="power"></i>Logout</a>
 						</div>
