--- a/resources/view/admin/modules/players/index.html.twig
+++ b/resources/view/admin/modules/players/index.html.twig
@@ -9,7 +9,7 @@
                             <h2 class="content-header-title float-start mb-0">Players</h2>
                             <div class="breadcrumb-wrapper">
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="{{ URL }}/admin">Home</a></li>
+                                    <li class="breadcrumb-item"><a href="{{ URL }}/admin/home">Home</a></li>
                                     <li class="breadcrumb-item active">Players</li>
                                 </ol>
                             </div>
@@ -52,7 +52,7 @@
 												</div>
 											</div>
 											<div class="d-flex flex-column">
-												<a href="{{ URL }}/admin/players/{{ player.id }}" class="user_name text-truncate text-body">
+												<a href="{{ URL }}/admin/players/{{ player.id }}/view" class="user_name text-truncate text-body">
 													<span class="fw-bolder">
 													{{ player.name }}
 													{% if player.skull is not empty %}
@@ -85,7 +85,7 @@
 									<span class="badge rounded-pill badge-light-warning" data-i18n="Coins">Coins: {{ player.coins }}</span>
 									</td>
 									<td>
-										<a href="{{ URL }}/admin/players/{{ player.id }}"><button class="btn btn-primary"><i data-feather="edit"></i> Editar</button></a>
+										<a href="{{ URL }}/admin/players/{{ player.id }}/view"><button class="btn btn-primary"><i data-feather="edit"></i> Editar</button></a>
 									</td>
 								</tr>
 								{% endfor %}
