--- a/resources/view/admin/modules/accounts/index.html.twig
+++ b/resources/view/admin/modules/accounts/index.html.twig
@@ -69,7 +69,7 @@
 														{{ account.coins }}</span>
 												</td>
 												<td>
-													<a href="{{ URL }}/admin/accounts/{{ account.id }}">
+													<a href="{{ URL }}/admin/accounts/{{ account.id }}/view">
 														<button type="button" data-bs-toggle="tooltip" data-bs-placement="bottom" title="View" class="btn btn-icon btn-primary waves-effect waves-float waves-light">
 															<i data-feather="eye"></i>
 														</button>
