--- a/resources/view/admin/base.html.twig
+++ b/resources/view/admin/base.html.twig
@@ -28,6 +28,9 @@
 
 		<link rel="stylesheet" type="text/css" href="{{ URL }}/resources/canary/style.css">
 
+		<script src="{{ URL }}/resources/canary/vendors/js/extensions/sweetalert2.all.min.js"></script>
+		<script src="{{ URL }}/resources/canary/vendors/js/extensions/polyfill.min.js"></script>
+
 		<title>{{title}}</title>
 	</head>
 	<body
@@ -217,7 +220,7 @@
 		<script src="{{ URL }}/resources/canary/custom/form-number-input.js"></script>
 
 		<script src="{{ URL }}/resources/canary/js/scripts/extensions/ext-component-i18n.js"></script>
-
+		
 		<!-- Custom -->
 		<script src="{{ URL }}/resources/canary/custom/charts.js"></script>
 		<script src="{{ URL }}/resources/canary/custom/players-list.js"></script>
