--- a/resources/view/admin/modules/settings/index.html.twig
+++ b/resources/view/admin/modules/settings/index.html.twig
@@ -1,4 +1,4 @@
-<!-- BEGIN: Content-->
+{{ sweetAlert|raw }}
 <div class="app-content content ">
 	<div class="content-overlay"></div>
 	<div class="header-navbar-shadow"></div>
@@ -7,13 +7,14 @@
 			<div class="content-header-left col-md-9 col-12 mb-2">
 				<div class="row breadcrumbs-top">
 					<div class="col-12">
-						<h2 class="content-header-title float-start mb-0">Settings</h2>
+						<h2 class="content-header-title float-start mb-0">Website</h2>
 						<div class="breadcrumb-wrapper">
 							<ol class="breadcrumb">
 								<li class="breadcrumb-item">
 									<a href="{{ URL }}/admin/home">Home</a>
 								</li>
 								<li class="breadcrumb-item active">Settings</li>
+								<li class="breadcrumb-item active">Website</li>
 							</ol>
 						</div>
 					</div>
@@ -23,19 +24,17 @@
 		<div class="content-body">
 			<section id="settings">
 				<div class="row match-height">
-                    <div class="">
-                    {{ status|raw }}
-                    </div>
-					<div class="col-xl-6 col-md-6 col-12">
+					<div class="col-xl-6 col-md-12 col-12">
+						{{ status|raw }}
 						<div class="card">
 							<div class="card-body">
 								<form action="{{URL}}/admin/settings" method="post">
 									<div class="row">
-										<div class="col-md-12 col-lg-12">
+										<div class="col-md-12 col-lg-6">
 											<label class="form-label" for="website_title">Title</label>
 											<input type="text" name="website_title" id="website_title" class="form-control mb-1" value="{{ title }}">
 										</div>
-										<div class="col-md-12 col-lg-12">
+										<div class="col-md-12 col-lg-6">
 											<label class="form-label" for="website_download">Client Link</label>
 											<input type="text" name="website_download" id="website_download" class="form-control mb-1" value="{{ download_link }}">
 										</div>
@@ -78,7 +77,7 @@
 											</div>
 										</div>
 										<div class="col-md-12 col-lg-12">
-											<input type="submit" class="btn btn-primary" name="website_update" value="Salvar alterações">
+											<input type="submit" class="btn btn-primary" name="website_update" id="sweet-success" value="Save Changes">
 										</div>
 									</div>
 								</form>
