--- a/resources/view/pages/shop/paymentdata.html.twig
+++ b/resources/view/pages/shop/paymentdata.html.twig
@@ -60,8 +60,8 @@
 					</div>
 				</div>
 				<div class="CustomerIdentification">Order for:
-					<span id="DisplayEMail" onmousedown="ToggleMaskedText('EMail');">e*******@email.com</span>
-					<span id="MaskedEMail">e*******@email.com</span>
+					<span id="DisplayEMail" onmousedown="ToggleMaskedText('EMail');">********@email.com</span>
+					<span id="MaskedEMail">********@email.com</span>
 					<span id="ReadableEMail">{{ email }}</span>
 					<div><img id="ButtonEMail" onmousedown="ToggleMaskedText('EMail');" src="{{IMAGE_PATH}}/global/general/show.gif"></div>
 				</div>
