Added page content check for translation

--- a/resources/view/admin/modules/settings/index.html.twig
+++ b/resources/view/admin/modules/settings/index.html.twig
@@ -61,7 +61,7 @@
 											</div>
 										</div>
 										<div class="col-md-12 col-lg-4 mb-1">
-											<label class="form-label" for="website_maxplayers">Max Players Account</label>
+											<label class="form-label" for="website_maxplayers" data-i18n="Max Players Account">Max Players Account</label>
 											<div class="demo-inline-spacing">
 												<div class="input-group bootstrap-touchspin">
 													<input type="number" class="touchspin" name="website_maxplayers" id="website_maxplayers" value="{{ player_max }}"/>
@@ -69,7 +69,7 @@
 											</div>
 										</div>
 										<div class="col-md-12 col-lg-4 mb-1">
-											<label class="form-label" for="website_levelguild">Level Guild</label>
+											<label class="form-label" for="website_levelguild" data-i18n="Level Guild">Level Guild</label>
 											<div class="demo-inline-spacing">
 												<div class="input-group">
 													<input type="number" class="form-control" name="website_levelguild" id="website_levelguild" value="{{ player_guild }}"/>
